@@ -12,8 +12,6 @@ import com.gmail.nossr50.commands.experience.AddlevelsCommand;
 import com.gmail.nossr50.commands.experience.AddxpCommand;
 import com.gmail.nossr50.commands.experience.MmoeditCommand;
 import com.gmail.nossr50.commands.experience.SkillresetCommand;
-import com.gmail.nossr50.commands.hardcore.HardcoreCommand;
-import com.gmail.nossr50.commands.hardcore.VampirismCommand;
 import com.gmail.nossr50.commands.party.PartyCommand;
 import com.gmail.nossr50.commands.party.teleport.PtpCommand;
 import com.gmail.nossr50.commands.player.*;
@@ -363,25 +361,25 @@ public final class CommandRegistrationManager {
         command.setExecutor(new PtpCommand());
     }
 
-    private static void registerHardcoreCommand() {
-        PluginCommand command = mcMMO.p.getCommand("hardcore");
-        command.setDescription(LocaleLoader.getString("Commands.Description.hardcore"));
-        command.setPermission("mcmmo.commands.hardcore;mcmmo.commands.hardcore.toggle;mcmmo.commands.hardcore.modify");
-        command.setPermissionMessage(permissionsMessage);
-        command.setUsage(LocaleLoader.getString("Commands.Usage.1", "hardcore", "[on|off]"));
-        command.setUsage(command.getUsage() + "\n" + LocaleLoader.getString("Commands.Usage.1", "hardcore", "<" + LocaleLoader.getString("Commands.Usage.Rate") + ">"));
-        command.setExecutor(new HardcoreCommand());
-    }
-
-    private static void registerVampirismCommand() {
-        PluginCommand command = mcMMO.p.getCommand("vampirism");
-        command.setDescription(LocaleLoader.getString("Commands.Description.vampirism"));
-        command.setPermission("mcmmo.commands.vampirism;mcmmo.commands.vampirism.toggle;mcmmo.commands.vampirism.modify");
-        command.setPermissionMessage(permissionsMessage);
-        command.setUsage(LocaleLoader.getString("Commands.Usage.1", "vampirism", "[on|off]"));
-        command.setUsage(command.getUsage() + "\n" + LocaleLoader.getString("Commands.Usage.1", "vampirism", "<" + LocaleLoader.getString("Commands.Usage.Rate") + ">"));
-        command.setExecutor(new VampirismCommand());
-    }
+//    private static void registerHardcoreCommand() {
+//        PluginCommand command = mcMMO.p.getCommand("hardcore");
+//        command.setDescription(LocaleLoader.getString("Commands.Description.hardcore"));
+//        command.setPermission("mcmmo.commands.hardcore;mcmmo.commands.hardcore.toggle;mcmmo.commands.hardcore.modify");
+//        command.setPermissionMessage(permissionsMessage);
+//        command.setUsage(LocaleLoader.getString("Commands.Usage.1", "hardcore", "[on|off]"));
+//        command.setUsage(command.getUsage() + "\n" + LocaleLoader.getString("Commands.Usage.1", "hardcore", "<" + LocaleLoader.getString("Commands.Usage.Rate") + ">"));
+//        command.setExecutor(new HardcoreCommand());
+//    }
+//
+//    private static void registerVampirismCommand() {
+//        PluginCommand command = mcMMO.p.getCommand("vampirism");
+//        command.setDescription(LocaleLoader.getString("Commands.Description.vampirism"));
+//        command.setPermission("mcmmo.commands.vampirism;mcmmo.commands.vampirism.toggle;mcmmo.commands.vampirism.modify");
+//        command.setPermissionMessage(permissionsMessage);
+//        command.setUsage(LocaleLoader.getString("Commands.Usage.1", "vampirism", "[on|off]"));
+//        command.setUsage(command.getUsage() + "\n" + LocaleLoader.getString("Commands.Usage.1", "vampirism", "<" + LocaleLoader.getString("Commands.Usage.Rate") + ">"));
+//        command.setExecutor(new VampirismCommand());
+//    }
 
     private static void registerMcnotifyCommand() {
         PluginCommand command = mcMMO.p.getCommand("mcnotify");
@@ -473,8 +471,8 @@ public final class CommandRegistrationManager {
         registerSkillresetCommand();
 
         // Hardcore Commands
-        registerHardcoreCommand();
-        registerVampirismCommand();
+//        registerHardcoreCommand();
+//        registerVampirismCommand();
 
         // Party Commands
         registerPartyCommand();
