@@ -156,14 +156,14 @@ commands:
     mcpurge:
         description: Purge users with 0 powerlevel and/or who haven't connected in several months from the server DB.
         permission: mcmmo.commands.mcpurge
-    hardcore:
-        aliases: [mchardcore]
-        description: Modify the mcMMO hardcore percentage or toggle hardcore mode on/off
-        permission: mcmmo.commands.hardcore
-    vampirism:
-        aliases: [mcvampirism]
-        description: Modify the mcMMO vampirism percentage or toggle vampirism mode on/off
-        permission: mcmmo.commands.vampirism
+#    hardcore:
+#        aliases: [mchardcore]
+#        description: Modify the mcMMO hardcore percentage or toggle hardcore mode on/off
+#        permission: mcmmo.commands.hardcore
+#    vampirism:
+#        aliases: [mcvampirism]
+#        description: Modify the mcMMO vampirism percentage or toggle vampirism mode on/off
+#        permission: mcmmo.commands.vampirism
     mcnotify:
         aliases: [notify]
         description: Toggle mcMMO abilities chat display notifications on/off
@@ -833,7 +833,7 @@ permissions:
             mcmmo.commands.addxp: true
             mcmmo.commands.addxp.others: true
             mcmmo.commands.defaults: true
-            mcmmo.commands.hardcore.all: true
+#            mcmmo.commands.hardcore.all: true
             mcmmo.commands.inspect.far: true
             mcmmo.commands.inspect.hidden: true
             mcmmo.commands.mcability.others: true
@@ -854,7 +854,7 @@ permissions:
             mcmmo.commands.ptp.world.all: true
             mcmmo.commands.reloadlocale: true
             mcmmo.commands.skillreset.all: true
-            mcmmo.commands.vampirism.all: true
+#            mcmmo.commands.vampirism.all: true
             mcmmo.commands.xprate.all: true
     mcmmo.commands.acrobatics:
         description: Allows access to the acrobatics command
@@ -876,23 +876,23 @@ permissions:
         description: Allows access to the excavation command
     mcmmo.commands.fishing:
         description: Allows access to the fishing command
-    mcmmo.commands.hardcore.*:
-        default: false
-        description: Implies access to all mcmmo.commands.hardcore permissions
-        children:
-            mcmmo.commands.hardcore.all: true
-    mcmmo.commands.hardcore.all:
-        description: Implies access to all mcmmo.commands.hardcore permissions
-        children:
-            mcmmo.commands.hardcore: true
-            mcmmo.commands.hardcore.modify: true
-            mcmmo.commands.hardcore.toggle: true
-    mcmmo.commands.hardcore:
-        description: Allows access to the hardcore command
-    mcmmo.commands.hardcore.modify:
-        description: Allows access to the hardcore command to modify the hardcore rate
-    mcmmo.commands.hardcore.toggle:
-        description: Allows access to the hardcore command to toggle hardcore on/off
+#    mcmmo.commands.hardcore.*:
+#        default: false
+#        description: Implies access to all mcmmo.commands.hardcore permissions
+#        children:
+#            mcmmo.commands.hardcore.all: true
+#    mcmmo.commands.hardcore.all:
+#        description: Implies access to all mcmmo.commands.hardcore permissions
+#        children:
+#            mcmmo.commands.hardcore: true
+#            mcmmo.commands.hardcore.modify: true
+#            mcmmo.commands.hardcore.toggle: true
+#    mcmmo.commands.hardcore:
+#        description: Allows access to the hardcore command
+#    mcmmo.commands.hardcore.modify:
+#        description: Allows access to the hardcore command to modify the hardcore rate
+#    mcmmo.commands.hardcore.toggle:
+#        description: Allows access to the hardcore command to toggle hardcore on/off
     mcmmo.commands.herbalism:
         description: Allows access to the herbalism command
     mcmmo.commands.inspect.*:
@@ -1283,23 +1283,23 @@ permissions:
         description: Allows access to the taming command
     mcmmo.commands.unarmed:
         description: Allows access to the unarmed command
-    mcmmo.commands.vampirism.*:
-        default: false
-        description: Implies access to all mcmmo.commands.vampirism permissions
-        children:
-            mcmmo.commands.vampirism.all: true
-    mcmmo.commands.vampirism.all:
-        description: Implies access to all mcmmo.commands.vampirism permissions
-        children:
-            mcmmo.commands.vampirism: true
-            mcmmo.commands.vampirism.modify: true
-            mcmmo.commands.vampirism.toggle: true
-    mcmmo.commands.vampirism:
-        description: Allows access to the vampirism command
-    mcmmo.commands.vampirism.modify:
-        description: Allows access to the vampirism command to modify the vampirism rate
-    mcmmo.commands.vampirism.toggle:
-        description: Allows access to the vampirism command to toggle vampirism on/off
+#    mcmmo.commands.vampirism.*:
+#        default: false
+#        description: Implies access to all mcmmo.commands.vampirism permissions
+#        children:
+#            mcmmo.commands.vampirism.all: true
+#    mcmmo.commands.vampirism.all:
+#        description: Implies access to all mcmmo.commands.vampirism permissions
+#        children:
+#            mcmmo.commands.vampirism: true
+#            mcmmo.commands.vampirism.modify: true
+#            mcmmo.commands.vampirism.toggle: true
+#    mcmmo.commands.vampirism:
+#        description: Allows access to the vampirism command
+#    mcmmo.commands.vampirism.modify:
+#        description: Allows access to the vampirism command to modify the vampirism rate
+#    mcmmo.commands.vampirism.toggle:
+#        description: Allows access to the vampirism command to toggle vampirism on/off
     mcmmo.commands.woodcutting:
         description: Allows access to the woodcutting command
     mcmmo.commands.xprate.*:
